src/component/data_grid/snapshots/envision__component__data_grid__snapshot_tests__snapshot_default_empty.snap
---
source: src/component/data_grid/snapshot_tests.rs
assertion_line: 53
expression: terminal.backend().to_string()
---
┌──────────────────────────────────────────────────────────┐
│Name                          Age                         │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
