src/component/data_grid/snapshots/envision__component__data_grid__snapshot_tests__snapshot_editing.snap
---
source: src/component/data_grid/snapshot_tests.rs
assertion_line: 106
expression: terminal.backend().to_string()
---
┌──────────────────────────────────────────────────────────┐
│  Name                         Age                        │
│                                                          │
│> Alice                        30                         │
│  Bob                          25                         │
│  Charlie                      35                         │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
