src/component/data_grid/snapshots/envision__component__data_grid__snapshot_tests__view_chrome_owned_no_outer_border.snap
---
source: src/component/data_grid/snapshot_tests.rs
expression: terminal.backend().to_string()
---
  Name                Age               
                                        
> Alice               30                
  Bob                 25                
  Charlie             35
